# cpp-chess-engine

./: Begin.cpp  ChessEngineMain.cpp  app  glad.c
app.dSYM/Contents/Resources/DWARF/: app
dependencies/include/glad/: glad.h
glad/include/glad/: glad.h
glad/src/: glad.c
notneeded/: CMakeLists.txt  oldtaskclang++.json
output/: ChessEngineMain  codeforces
output/ChessEngineMain.dSYM/Contents/: Info.plist
output/ChessEngineMain.dSYM/Contents/Resources/DWARF/: ChessEngineMain
output/codeforces.dSYM/Contents/Resources/DWARF/: codeforces
